fix:alignment

--- a/src/index.css
+++ b/src/index.css
@@ -709,10 +709,9 @@ section.banner {
 }
 
 .project {
-  height: fit-content;
+  height: 694px;
   width: 100%;
   max-width: 584px;
-  min-width: 280px;
   margin: 10px;
   border: 1px solid #e0e2f1;
   border-radius: 5px;
@@ -720,6 +719,8 @@ section.banner {
 
 .project img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
 .project .project-info {
@@ -734,6 +735,12 @@ section.banner {
   line-height: 36px;
   color: #1c1b1f;
   margin: 10px 0px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .project-info p {
